# Test

3rfa/1.1st_week_task/: README.md
3rfa/1.1st_week_task/task_ws/install/: local_setup.sh  setup.sh
3rfa/1.1st_week_task/task_ws/install/arafa_package/lib/arafa_package/: demo_node  my_name
3rfa/1.1st_week_task/task_ws/install/arafa_package/share/arafa_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
3rfa/1.1st_week_task/task_ws/log/: latest_build  latest_list
3rfa/1.1st_week_task/task_ws/src/arafa_package/: package.xml  setup.cfg  setup.py
Elzahaby/: Docs.md
Elzahaby/ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Elzahaby/ws/install/zahaby_pkg/lib/zahaby_pkg/: turt_cont  turtle_cont
Elzahaby/ws/install/zahaby_pkg/share/zahaby_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Elzahaby/ws/log/: latest_build
Elzahaby/ws/src/zahaby_pkg/: package.xml  setup.cfg  setup.py
Elzahaby/ws/src/zahaby_pkg/zahaby_pkg/: turt_cont.py
Mwafy/: Docs.md
Mwafy/ros2_my_ws/install/: local_setup.sh  setup.sh
Mwafy/ros2_my_ws/install/Letters_Drawing_2/share/Letters_Drawing_2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Mwafy/ros2_my_ws/install/Letters_Drawing_2/share/Letters_Drawing_2/cmake/: Letters_Drawing_2Config.cmake
Mwafy/ros2_my_ws/install/letters_drawing_2/lib/letters_drawing_2/: turtle_publisher.py  turtle_subscriber.py
Mwafy/ros2_my_ws/install/letters_drawing_2/share/letters_drawing_2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Mwafy/ros2_my_ws/install/turtle_control_1/lib/turtle_control_1/: drawing_A  drawing_D  drawing_E  drawing_H  drawing_M
Mwafy/ros2_my_ws/install/turtle_control_1/share/turtle_control_1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Mwafy/ros2_my_ws/log/: latest_build  latest_list
Mwafy/ros2_my_ws/src/letters_drawing_2/: CMakeLists.txt  package.xml
Mwafy/ros2_my_ws/src/letters_drawing_2/msg/: TurtleInfo.msg
Mwafy/ros2_my_ws/src/letters_drawing_2/src/: turtle_publisher.py
Mwafy/ros2_my_ws/src/turtle_control_1/: setup.cfg  setup.py
Mwafy/ros2_my_ws/src/turtle_control_1/turtle_control_1/: drawing_M.py
Osama/: Docs.md
Osama/1st_task_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Osama/1st_task_ws/install/write_my_name/lib/write_my_name/: name_drawer
Osama/1st_task_ws/install/write_my_name/share/write_my_name/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Osama/1st_task_ws/log/: latest_build  latest_list
Osama/1st_task_ws/src/write_my_name/: package.xml  setup.cfg  setup.py
(+24 files in other folders)
